--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:opencv="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <SurfaceView
+    <org.opencv.android.JavaCameraView
+        android:id="@+id/camera_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/preview"
+        android:visibility="visible"
+        opencv:camera_id="any"
+        opencv:show_fps="true"
         android:layout_gravity="center" />
 
 </FrameLayout>
